Set java version to 1.8 and fix codebase